activity: Fixing some UI spacing

--- a/talentdashboard/static/css/scoutmap/app/activity.less
+++ b/talentdashboard/static/css/scoutmap/app/activity.less
@@ -231,16 +231,17 @@
 
 
   .comment-replies {
+    padding-top: 10px;
+    background-color: #efefef;
 
     @media only screen and (max-width : 640px) {
         margin: 10px 0 0;
     }
     .comment-reply {
-      padding: 15px 15px 20px;
-      background-color: #efefef;
+      padding: 10px 15px;
     }
     .comment-reply-textarea {
-        padding: 10px 10px 20px 10px;
+        padding: 20px 10px;
         background-color: #efefef;
 
         textarea {
